// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`kind-detection.ts format[typescript] 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare /* module */ namespace A {}

=====================================output=====================================
declare namespace /* module */ A {}

================================================================================
`;

exports[`moduleDeclaration.ts format[typescript] 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module A {
    export class A {
    }
}

declare module "B" {
    export class B {
    }
}

=====================================output=====================================
module A {
  export class A {}
}

declare module "B" {
  export class B {}
}

================================================================================
`;
